<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/theme_primary_dark2"
        android:backgroundTint="@color/theme_primary_dark2"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/Theme.MaterialSheetFab.Base">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/titleThing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_awesome_toolbar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/journeyName"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/titleJourneyET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/titleJourney"
        android:layout_alignBottom="@+id/titleJourney"
        android:layout_toEndOf="@+id/titleJourney"
        android:ems="6"
        android:hint="@string/hintName"
        android:inputType="text"
        android:paddingEnd="5sp"
        android:paddingStart="5sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/typeJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleJourney"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/journeyType"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/typeJourney"
        android:layout_toEndOf="@+id/typeJourney"
        android:entries="@array/journeyTypes"
        android:prompt="@string/journey_prompt"
        android:textAlignment="center"
        />


    <TextView
        android:id="@+id/dateJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeJourney"
        android:paddingTop="15sp"
        android:text="@string/journeyDate1"
        android:textSize="18sp"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"/>


    <EditText
        android:id="@+id/editStartJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateJourney"
        android:layout_alignBottom="@+id/dateJourney"
        android:layout_toEndOf="@+id/titleJourney"
        android:ems="6"
        android:focusableInTouchMode="false"
        android:paddingEnd="5sp"
        android:paddingStart="5sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/dateJourneyReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateJourney"
        android:paddingTop="15sp"
        android:text="@string/journeyDate2"
        android:textSize="18sp"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"/>


    <EditText
        android:id="@+id/editReturnJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateJourneyReturn"
        android:layout_alignBottom="@+id/dateJourneyReturn"
        android:layout_toEndOf="@+id/titleJourney"
        android:ems="6"
        android:focusableInTouchMode="false"
        android:paddingEnd="5sp"
        android:paddingStart="5sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buttonInsertData"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/buttonInsertData"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>


